# quic-prototype

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  TODO.md  quic-prototype.cabal
Network/: QUIC.hs
Network/QUIC/: Decode.hs  Encode.hs  Error.hs  Frame.hs  Header.hs  Internal.hs  Packet.hs  Params.hs  Priority.hs  Stream.hs  Types.hs
Network/QUIC/Internal/: AEAD.hs  Connection.hs  Crypto.hs  FEC.hs  Flags.hs  Frame.hs  Params.hs  Payload.hs  State.hs  UDP.hs  Version.hs
Network/QUIC/Internal/Connection/: Cubic.hs  Handshake.hs  Internal.hs
Network/QUIC/Internal/Frame/: Ack.hs  Blocked.hs  ConnectionClose.hs  GoAway.hs  Internal.hs  Padding.hs  RstStream.hs  StopWaiting.hs  Stream.hs  WindowUpdate.hs
Network/QUIC/Internal/Frame/Ack/: Block.hs  TimeStamp.hs
Network/QUIC/Internal/Util/: Binary.hs
example/: client.hs  server.hs
test/QUIC/: FrameSpec.hs
